# bcpl-compiler

./: .gitignore  BUILD_PROCESS_DOCUMENTATION.md  BUILD_STATUS.md  CMAKE_BUILD_OPTIONS.md  CMakeLists.txt  CMakeLists_MODERNIZED.txt  CMakeLists_legacy.txt  CMakePresets.json  FINAL_COMPLETION_SUMMARY.md  INSTALL  MODERNIZATION_COMPLETE.md  MODERNIZATION_PLAN.md  README  README.md  README_BUILDS.md  REPOSITORY_HARMONIZATION.md  REPOSITORY_HYGIENE.md  bcplc_driver.c  build.sh  build_max_performance.sh  build_optimized.sh  build_pgo.sh  build_portable_optimized.sh  byte_test_results.txt  cleanup_duplicates.py  cscope.po.out  dmesg_output.txt  download_xerox_bcpl.py  globals_analysis.txt  hello.b  makeall  modernize.sh  ocode_histogram.txt  reorganize.sh  select-devcontainer.sh  setup.sh  st_headers.txt  string_constants.txt  symbol_map.txt  test_bcpl.sh  (+9 more)
.codex/: configure.sh
.devcontainer/: Dockerfile  Dockerfile.ubuntu  README.debian.md  README.md  README.ubuntu.md  devcontainer.debian.json  devcontainer.json  devcontainer.ubuntu.json  setup.sh  setup.ubuntu.sh
.devcontainer-debian/: Dockerfile  README.md  devcontainer.json  setup.sh
archive/: README_BUILDS.md
build_64bit/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
docs/: BUILD.md  BUILD_OPTIMIZATION 2.md  CMakeLists 2.txt  CMakeLists.txt  MODERNIZATION.md  OCODE_64BIT_MODERNIZATION.md  OPTIMIZATION_QUICK_REFERENCE.md  README_OPTIMIZATION 2.md  REPOSITORY_ANALYSIS.md  REPOSITORY_HYGIENE.md  X86_INSTRUCTION_MATRIX.md  build_steps.md  manual 2.txt
docs/doxygen/html/: _c_o_p_y_r_i_g_h_t.html  _c_o_p_y_r_i_g_h_t_source.html  _i_n_s_t_a_l_l.html  _i_n_s_t_a_l_l_source.html  _l_i_c_e_n_s_e.html  _l_i_c_e_n_s_e_source.html  _r_e_a_d_m_e.html  _r_e_a_d_m_e_source.html  blib_8bcpl.html  blib_8bcpl_source.html  cg_8c.html  cg_8c_source.html  cmpltest_8bcpl.html  cmpltest_8bcpl_source.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  global_8s.html  global_8s_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  gpm_8bcpl.html  gpm_8bcpl_source.html  index.html  llcg_8c.html  llcg_8c_source.html  menudata.js  oc_8c.html  oc_8c_source.html  oc_8h.html  oc_8h_source.html  op_8c.html  op_8c_source.html  pages.html  (+21 more)
docs/doxygen/html/search/: all_1.js  all_10.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+32 more)
docs/doxygen/xml/: _c_o_p_y_r_i_g_h_t.xml  _i_n_s_t_a_l_l.xml  _l_i_c_e_n_s_e.xml  _r_e_a_d_m_e.xml  blib_8bcpl.xml  cg_8c.xml  cmpltest_8bcpl.xml  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  global_8s.xml  gpm_8bcpl.xml  index.xml  llcg_8c.xml  oc_8c.xml  oc_8h.xml  op_8c.xml  pt_8c.xml  rt_8s.xml  st_8bcpl.xml  su16_8s.xml  su_8s.xml  sys_8s.xml  sys__freebsd_8s.xml  sys__ia16_8s.xml  sys__linux_8s.xml  todo.xml  xref_8bcpl.xml
docs/sphinx/: building-installing 2.rst  building-installing.rst  compiler-backend.rst  conf 2.py  runtime-system.rst  tools-utilities 2.rst  tools-utilities.rst
docs/sphinx/_build/html/: .buildinfo.bak  api-reference.html  index.html  objects.inv  searchindex.js
docs/sphinx/_build/html/.doctrees/: api-reference.doctree  environment.pickle  tools-utilities.doctree
docs/sphinx/_build/html/_sources/: compiler-frontend.rst.txt  index.rst.txt  introduction.rst.txt
src/: CMakeLists 3.txt  CMakeLists 4.txt  CMakeLists.txt  CMakeLists_legacy 2.txt  CMakeLists_legacy.txt  CMakeLists_old 2.txt  LIBHDR.template  Makefile  bcpl_compile.bat  bcplc  blib.bcpl  blib.s  bootstrap_main.c  cg.c  cg_arith_ops.c  cg_arithmetic_operations.c  cg_compare_ops.c  cg_comparison_operations 2.c  cg_control_flow_operations 2.c  cg_ctrl_flow_ops.c  cg_func_ops.c  cg_function_operations 2.c  cg_legacy_impl.c  cg_load_operations 2.c  cg_load_ops.c  cg_logical_operations.c  cg_logical_ops.c  cg_memory_operations.c  cg_memory_ops.c  cg_meta_operations 2.c  cg_meta_ops.c  cg_modern 2.h  cg_modern.c  cg_modern.h  cg_store_operations 2.c  cg_store_ops.c  cg_x86_64.c  cg_x86_64.h  global.S  global.s  (+35 more)
src/arch/arm32/: runtime_arm32.c
src/arch/arm64/: runtime_arm64.c
src/arch/x86_16/: runtime_x86_16.c
src/arch/x86_32/: runtime_x86_32.c
src/arch/x86_64/: runtime_x86_64.c
src/codegen/: context.h  gencode.c
src/include/: bcpl_runtime.h  bcpl_types 2.h  bcpl_types.h  platform.h  universal_platform.h
src/include/platform/: generic.h  linux.h  macos.h
src/platform/: common_io.c  common_memory.c  freebsd.c  generic.c  linux 2.c  linux.c  macos.c  windows.c
src/runtime/: bcpl_runtime.c  io.c  memory.c  rt.c  startup.c  strings 2.c  strings.c  universal_startup.c  vectors.c
tests/: CMakeLists.txt  bcpl_tests.c  test_architecture 2.c  test_architecture.c  test_assembly_elimination.c  test_codegen_handlers.c  test_cross_platform.c  test_memory.c  test_memory_safety.c  test_performance.c  test_platform_abstraction.c  test_runtime.c
tools/: CMakeLists.txt  cmpltest.bcpl
xerox-alto-bcpl/: CMakeLists.txt
xerox-alto-bcpl/include/: LIBHDR
xerox-alto-bcpl/modernized/: BCAE0.bcpl  BCAE1.bcpl  BCAE2.bcpl  BCAE3.bcpl  BCAE4.bcpl  BCAEX  BCPL0.bcpl  BCPL1.bcpl  BCPLALTO.bcpl  BCPLDOS.bcpl  BCPLIOX  BCPLRDOS.bcpl  BCPLX  BLEX0.bcpl  BLEX0A.bcpl  BLEX1.bcpl  BLEX2.bcpl  BLEXX  BNCG0.bcpl  BNCG1.bcpl  BNCG2.bcpl  BNCG3.bcpl  BNCG4.bcpl  BNCG5.bcpl  BNCG6.bcpl  BNCG7.bcpl  BNCG8.bcpl  BNCGX  BSAE0.bcpl  BSAE1.bcpl  BSAE2.bcpl  BSAE3.bcpl  BSAE4.bcpl  BSAEX  BTRN0.bcpl  BTRN1.bcpl  BTRN2.bcpl  BTRN3.bcpl  BTRN4.bcpl  BTRN5.bcpl  (+1 more)
xerox-alto-bcpl/runtime/: analyzer.c
(+412 files in other folders)
